@@ -11,6 +11,8 @@
 
 #cmakedefine HAVE_BCOPY 1
 #cmakedefine HAVE_MEMMOVE 1
+#cmakedefine HAVE_STRERROR 1
+#cmakedefine HAVE_SECURE_GETENV 1
 
 #cmakedefine PCRE2_STATIC 1
 
